[build] 更新项目并添加Windows可执行文件